Iniciando criação do controller de login

--- a/MyPark/Views/Shared/_Layout.cshtml
+++ b/MyPark/Views/Shared/_Layout.cshtml
@@ -21,6 +21,8 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
+                    <li>@Html.ActionLink("Tipo de veículo", "TipoVeiculo", "Admin")</li>
+                    <li>@Html.ActionLink("Planos", "Planos", "Admin")</li>
                 </ul>
             </div>
         </div>
