--- a/MyPark/Views/Admin/TipoVeiculo.cshtml
+++ b/MyPark/Views/Admin/TipoVeiculo.cshtml
@@ -7,7 +7,7 @@
 <h2>TipoVeiculo</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Criar Tipo", "AddTipoVeiculo")
 </p>
 <table class="table">
     <tr>
