--- a/MyPark/Views/Admin/AddTipoVeiculo.cshtml
+++ b/MyPark/Views/Admin/AddTipoVeiculo.cshtml
@@ -65,8 +65,8 @@
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
+<div class="alert alert-danger">
+    @Html.ValidationSummary()
 </div>
 
 <script src="~/Scripts/jquery-1.10.2.min.js"></script>
