--- a/MyPark/Views/Admin/TipoVeiculo.cshtml
+++ b/MyPark/Views/Admin/TipoVeiculo.cshtml
@@ -1,57 +1,19 @@
 ﻿@model IEnumerable<MyPark.Model.DataBase.Models.TipoVeiculo>
 
+@using MyPark.Model.DataBase.Models
+
 @{
     ViewBag.Title = "TipoVeiculo";
 }
 
 <h2>TipoVeiculo</h2>
+<div id="tblTipoVeiculo">
+    @Html.Partial("_TabelaTipoVeiculo", Model)
+</div>
 
-<p>
-    @Html.ActionLink("Criar Tipo", "AddTipoVeiculo")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Titulo)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Descricao)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ValorHora)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DtCadastro)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Inativo)
-        </th>
-        <th></th>
-    </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Titulo)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Descricao)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ValorHora)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DtCadastro)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Inativo)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
+@Html.Partial("_AddTipoVeiculo", new TipoVeiculo()))
 
-</table>
+<div id="loadAjax" style="display:none;">
+    <img src="~/Images/load.gif" height="50" width="50"/>
+</div>
